# game-boy-emulator

./: BUILD.md  LICENSE  README.md
cmake/: FindCheck.cmake
cmake/sdl2/: FindSDL2.cmake
gbemu/: main.c
include/: cart.h  emu.h
lib/: CMakeLists.txt  emu.c  ppu.c
